--- a/apps/boce-ambulance-ufe/webcomponent.yaml
+++ b/apps/boce-ambulance-ufe/webcomponent.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   module-uri: http://boce-ambulance-ufe.wac-hospital/build/ambulance-ufe.esm.js
   navigation:
-    - element: boce-ambulance-wl-list
+    - element: boce-ambulance-wl-app
       path: boce-ambulance-wl
       title: Zoznam čakajúcich boce
       details: Spravuje zoznam pacientov čakajúcich na vyšetrenie v ambulancii
