--- a/apps/boce-ambulance-ufe/webcomponent.yaml
+++ b/apps/boce-ambulance-ufe/webcomponent.yaml
@@ -7,9 +7,14 @@ spec:
   module-uri: http://boce-ambulance-ufe.wac-hospital/build/ambulance-ufe.esm.js
   navigation:
     - element: boce-ambulance-wl-app
+      attributes:
+      - name: api-base
+        value: http://localhost:5000/api
+      - name: ambulance-id
+        value: bobulova
       path: boce-ambulance-wl
       title: Zoznam čakajúcich boce
       details: Spravuje zoznam pacientov čakajúcich na vyšetrenie v ambulancii
   preload: false
   proxy: true
-  hash-suffix: v1alpha1
+  hash-suffix: v1alpha2
