--- a/components/version-developers/kustomization.yaml
+++ b/components/version-developers/kustomization.yaml
@@ -7,3 +7,7 @@ images:
 - name: milung/ufe-controller
   newName: milung/ufe-controller # {"$imagepolicy":  "wac-hospital:ufe-controller:name"}
   newTag: 1.7.3 # {"$imagepolicy": "wac-hospital:ufe-controller:tag"}
+- name: boriscernak/ambulance-wl-webapi
+  newName: boriscernak/ambulance-wl-webapi # {"$imagepolicy":  "wac-hospital:ambulance-webapi:name"}
+  newTag: main # {"$imagepolicy": "wac-hospital:ambulance-webapi:tag"}
+
