--- a/clusters/localhost/gitops/prepare.kustomization.yaml
+++ b/clusters/localhost/gitops/prepare.kustomization.yaml
@@ -5,6 +5,16 @@ metadata:
   name: prepare
   namespace: wac-hospital
 spec:
+  # targeted healthcheck
+  healthChecks:
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: envoy-gateway
+      namespace: envoy-gateway-system
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: ufe-controller
+      namespace: wac-hospital
   interval: 120s
   path: clusters/localhost/prepare
   prune: true
