--- a/clusters/localhost/prepare/kustomization.yaml
+++ b/clusters/localhost/prepare/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - ../../../infrastructure/ufe-controller
+  - ../../../infrastructure/fluxcd
 patches:
   - path: patches/ufe-controller.service.yaml
