--- a/clusters/localhost/gitops/kustomization.yaml
+++ b/clusters/localhost/gitops/kustomization.yaml
@@ -11,6 +11,8 @@ resources:
   - git-repository.yaml
   - ambulance-ufe.image-repository.yaml
   - ambulance-ufe.image-policy.yaml
+  - ambulance-webapi.image-repository.yaml
+  - ambulance-webapi.image-policy.yaml
   - ufe-controller.image-repository.yaml
   - ufe-controller.image-policy.yaml
   - image-update-automation.yaml
