--- a/infrastructure/ufe-controller/kustomization.yaml
+++ b/infrastructure/ufe-controller/kustomization.yaml
@@ -3,6 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - https://github.com/milung/ufe-controller//configs/k8s/kustomize
+  - http-route.yaml
+
+patches:
+- path: patches/ufe-controller.deployment.yaml
 namespace: wac-hospital
 commonLabels:
   app.kubernetes.io/component: ufe-controller
