--- a/clusters/localhost/prepare/kustomization.yaml
+++ b/clusters/localhost/prepare/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ../../../infrastructure/ufe-controller
   - ../../../infrastructure/fluxcd
   - ../../../infrastructure/envoy-gateway
+  - ../../../infrastructure/cert-manager
 patches:
   - path: patches/ufe-controller.service.yaml
   - patch: |-
