--- a/clusters/localhost/install/kustomization.yaml
+++ b/clusters/localhost/install/kustomization.yaml
@@ -12,4 +12,5 @@ components:
  - ../../../components/version-developers
  - https://github.com/borisce/ambulance-webapi//deployments/kustomize/components/mongodb
 patches:
- - path: patches/ambulance-webapi.service.yaml   
+ - path: patches/ambulance-webapi.service.yaml
+ - path: patches/mongodb-auth.secret.yaml   
