--- a/clusters/localhost/secrets/kustomization.yaml
+++ b/clusters/localhost/secrets/kustomization.yaml
@@ -4,5 +4,16 @@ kind: Kustomization
 commonLabels:
   app.kubernetes.io/part-of: wac-hospital
 namespace: wac-hospital
-resources:
-  - repository-pat.yaml
+secretGenerator:
+  - name: repository-pat
+    type: Opaque
+    envs:
+      - params/repository-pat.env
+    options:
+        disableNameSuffixHash: true
+  - name: mongodb-auth
+    type: Opaque
+    envs:
+      - params/mongodb-auth.env
+    options:
+     disableNameSuffixHash: true      
