--- a/clusters/localhost/install/kustomization.yaml
+++ b/clusters/localhost/install/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ../../../apps/boce-ambulance-ufe
   - ../../../apps/boce-ambulance-webapi
   - ../../../apps/mongo-express
+  - ../../../apps/http-echo
 components:
  - ../../../components/version-developers
  - https://github.com/borisce/ambulance-webapi//deployments/kustomize/components/mongodb
